# cargo-gha

./: .dprint.json  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  cliff.toml  deny.toml
.cargo/: config.toml
.github/workflows/: release.yml  test.yml
src/: add_asset.rs  alias.rs  binary.rs  cargo_toml.rs  cli.rs  filesystem.rs  main.rs  shims.rs  wrappers.rs
